--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="cache-buster" content="v2.0.45-20250819-auto" />
+    <meta name="cache-buster" content="v2.0.45-20250820-clean" />
     
     <!-- PWA Configuration -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
