--- a/client/index.html
+++ b/client/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" content="#00D084" />
+    <meta name="theme-color" content="#7B2FF7" />
     <meta name="description" content="Create and participate in social predictions with friends on sports, entertainment, and viral moments" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="cache-buster" content="v2.0.67-2025-08-22-auto" />
+    <meta name="cache-buster" content="v2.0.68-2025-08-23-auto" />
     
     <!-- PWA Configuration -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
