--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="cache-buster" content="v2.0.67-2025-08-22-auto" />
+    <meta name="cache-buster" content="auto" />
     
     <!-- PWA Configuration -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
