--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/icons/icon-96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="theme-color" content="#7B2FF7" />
+    <meta name="theme-color" content="#14b8a6" />
     <meta name="description" content="Create and participate in social predictions with friends on sports, entertainment, and viral moments" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -33,14 +33,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Fan Club Z - Social Predictions Platform" />
     <meta property="og:description" content="Create and participate in social predictions with friends on sports, entertainment, and viral moments" />
-    <meta property="og:image" content="/icons/android-chrome-512x512.png" />
+    <meta property="og:image" content="/icons/icon-512.png" />
     <meta property="og:url" content="https://fanclubz.com" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Fan Club Z - Social Predictions Platform" />
     <meta name="twitter:description" content="Create and participate in social predictions with friends" />
-    <meta name="twitter:image" content="/icons/icon-512x512.png" />
+    <meta name="twitter:image" content="/icons/icon-512.png" />
     
     <!-- Preconnect to important domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
