--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,11 @@
       gtag('js', new Date());
       gtag('config', 'G-HYSCGHYHHZ');
     </script>
-    <link rel="icon" type="image/png" href="/brand/fcz-logomark.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="/icons/icon-96.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#14b8a6" />
     <meta name="description" content="Create and participate in social predictions with friends on sports, entertainment, and viral moments" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
